changes to project

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
         <input id="Title" type="text" name="title" placeholder="TITLE" required/>
         <textarea name="description" placeholder="DESCRIPTION" required></textarea>
-        <input type="button" value="Submit" style="padding:1px 0px;" onClick="blogPost(form, blog);">
+        <input type="button" value="Submit" style="padding:1px 0px;" onClick="blogPost.addBlog(blog);">
 
       </fieldset>
     </form>
   </div>
   <div id="search">
-    <input name="search" placeholder="Search .." onchange="search(this.value);">
+    <input name="search" placeholder="Search .." onchange="blogPost.search(this.value);">
   </div>
   <div id="searchResult"></div>
   <script type="text/javascript" src="main.js"></script>
