changing box-sizing for submit button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <input id="Title" type="text" name="title" placeholder="TITLE" required/>
         <textarea name="description" placeholder="DESCRIPTION" required></textarea>
-        <input type="button" value="Submit" style="padding:1px 0px;" onClick="blogPost.addBlog(blog);">
+        <input type="button" value="Submit" style="box-sizing: content-box;" onClick="blogPost.addBlog(blog);">
 
       </fieldset>
     </form>
